--- a/film site/index.html
+++ b/film site/index.html
@@ -44,10 +44,20 @@
                             <div class="artist">Artist Name</div>
                         </div>
                     </div>
-                    <img src="video gifs/red-final.gif" alt="Red"/>
+                    <img src="https://i.ibb.co/DM3wNQf/red-final.gif" alt="Red" border="0">
                 </div>
 
-                <!-- Second Project: VHS -->
+                <!-- Second Project: Headdress -->
+                <div class="swiper-slide">
+                    <div class="slider-copy">
+                        <div class="header">Headdress</div>
+                        <div class="song-details">
+                            <div class="song-name">Project Name</div>
+                            <div class="artist">Artist Name</div>
+                        </div>
+                    </div>
+                    <img src="https://i.ibb.co/RgGzqwf/ezgif-com-video-to-gif.gif" alt="Headdress" border="0">
+                </div>
                 <div class="swiper-slide">
                     <div class="slider-copy">
                         <div class="header">VHS</div>
@@ -59,16 +69,16 @@
                     <img src="video gifs/screen.gif" alt="VHS"/>
                 </div>
 
-                <!-- Third Project: Headdress-->
+                <!-- Third Project: VHS-->
                 <div class="swiper-slide">
                     <div class="slider-copy">
-                        <div class="header">Headdress</div>
+                        <div class="header">VHS</div>
                         <div class="song-details">
                             <div class="song-name">Project Name</div>
                             <div class="artist">Artist Name</div>
                         </div>
                     </div>
-                    <img src="video gifs/headdress.gif" alt="Headdress"/>
+                    <img src="video gifs/screen.gif" alt="VHS"/>
                 </div>
 
                 <!-- Fourth Project: Hypnosis-->
