--- a/main.html
+++ b/main.html
@@ -5,10 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Minimalist Portfolio</title>
 		<link rel="stylesheet" href="css/styles.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 		<!-- Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="/sk modernist/Sk-Modernist-Regular.otf" />
 		<link rel="stylesheet" href="/bigilla/Bigilla.otf" />
 		<link href="https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&family=Raleway+Dots&family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -22,11 +23,13 @@
 
 				<!-- navbar -->
 				<div class="navbar">
-					<div class="navbar-container">
-						<div class="site-title"><a href="https://www.instagram.com/chaeri.heav3n/" target="_blank">chaeri.heav3n</a></div>
-						<div class="site-type">portfolio</div>
-						<div class="site-year">2023</div>
-					</div>
+					<a class="link-none" href="main.html">
+						<div class="navbar-container">
+							<div class="site-title"><a href="https://www.instagram.com/chaeri.heav3n/" target="_blank">chaeri.heav3n</a></div>
+							<div class="site-type">portfolio</div>
+							<div class="site-year">2023</div>
+						</div>
+					</a>
 				</div>
 
 				<div class="divider"></div>
@@ -66,16 +69,12 @@
 				<section class="about">
 					<div class="about-container">
 						<p>
-							Greetings! I'm chaeri.heav3n, fka, Zay. My deep driving passion & muse
-							is life itself. My experiences heavily influence my creations 
-							and is channeled to create sound, music, poetry, 3D art, abstract art, and so on. 
+							Greetings! I'm chaeri.heav3n, formally known as Zay. Professionally, I am an HTML
+							email developer. Creatively, most of my energy is being channeled into
+							<a href="https://www.youtube.com/channel/UCB2vyk19067nWCTAVhuNkPA" target="_blank">here.ynow</a>. 
+							<br><br>here.ynow (born in March 1996) is my declared lifelong project to channel lessons in self-awareness & higher consciousness into works of art
+							— for the world to consume and feel inspired by. Stay tuned for more.
 						</p>
-						<p>
-							My declared life's work is being funneled into <a href="https://www.youtube.com/channel/UCB2vyk19067nWCTAVhuNkPA" target="_blank">here.ynow</a>.
-							It is currently under construction as I get my online presence started, so follow me
-							on <a href="https://www.instagram.com/chaeri.heav3n/" target="_blank">Instagram</a> for updates.
-						</p>
-						<p>Thanks for stopping by! And I hope to see you stay for the journey!</p>
 					</div>
 				</section>
 
@@ -160,7 +159,7 @@
 					<div class="clients-container">
 						<p>
 							<br />
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;open for work & collaborations.
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;let's collab.
 							<br />
 						</p>
 					</div>
@@ -180,10 +179,10 @@
 
 				<section class="socials">
 					<div class="socials-container">
-						<div class="socials-id dr"><a href="https://www.instagram.com/chaeri.heav3n/" target="_blank">instagram</a></div>
-						<div class="socials-id ln"><a href="https://github.com/Chaeri-Heav3n" target="_blank">github</a></div>
-						<div class="socials-id ig"><a href="">linkedin</a></div>
-						<div class="socials-id tw"><a href="https://www.youtube.com/playlist?list=PLOGuxFMUsIM8O11z3X5QWgZnyqUljTPb8" target="_blank">✰playlist✰</a></div>
+						<div class="socials-id dr"><a href="https://www.instagram.com/chaeri.heav3n/" target="_blank">insta</a></div>
+						<div class="socials-id ln"><a href="https://github.com/Chaeri-Heav3n" target="_blank">ghub</a></div>
+						<div class="socials-id ig"><a href="https://www.linkedin.com/in/zay-ford-97949b247/" target="_blank">lnkd-in</a></div>
+						<div class="socials-id tw"><a href="https://www.youtube.com/playlist?list=PLOGuxFMUsIM8O11z3X5QWgZnyqUljTPb8" target="_blank">✰♫✰</a></div>
 					</div>
 				</section>
 
@@ -193,7 +192,7 @@
 				<div class="footer">
 					<div class="navbar">
 						<div class="navbar-container">
-							<div class="site-title">chaeri.heav3n@htmldreams.com</div>
+							<div class="site-title">zaikamgmt@gmail.com</div>
 							<div class="site-year">55.386656, 11.764279</div>
 						</div>
 					</div>
