--- a/3d.html
+++ b/3d.html
@@ -5,10 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Minimalist Portfolio</title>
 		<link rel="stylesheet" href="css/styles.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 		<!-- Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="/sk modernist/Sk-Modernist-Regular.otf" />
 		<link rel="stylesheet" href="/bigilla/Bigilla.otf" />
 		<link href="https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&family=Raleway+Dots&family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -23,7 +24,7 @@
 
 				<!-- navbar -->
 				<div class="navbar">
-					<a class="link-none" href="index.html">
+					<a class="link-none" href="main.html">
 						<div class="navbar-container">
 							<div class="site-title">chaeri.heav3n</div>
 							<div class="site-type">portfolio</div>
@@ -60,9 +61,6 @@
 					<p class="click-github">But here is a sneak peak:</p>
 					<div class="skills-container">
 						<div class="skills-icons">
-							<div class="process-icon">
-                                <img class="img-3d-gif" src="images/chaeri.gif" alt="Chaeri Logo">
-                            </div>
 							<div class="process-icon">
                                 <img class="img-3d-gif" src="images/chaeri.gif" alt="Chaeri Logo">
                             </div>
@@ -170,7 +168,7 @@
 					<div class="clients-container">
 						<p>
 							<br />
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;open for work & collaborations.
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;let's collab.
 							<br />
 						</p>
 					</div>
@@ -190,10 +188,10 @@
 
 				<section class="socials">
 					<div class="socials-container">
-						<div class="socials-id dr"><a href="https://www.instagram.com/chaeri.heav3n/" target="_blank">instagram</a></div>
-						<div class="socials-id ln"><a href="https://github.com/Chaeri-Heav3n" target="_blank">github</a></div>
-						<div class="socials-id ig"><a href="">linkedin</a></div>
-						<div class="socials-id tw"><a href="https://www.youtube.com/playlist?list=PLOGuxFMUsIM8O11z3X5QWgZnyqUljTPb8" target="_blank">✰playlist✰</a></div>
+						<div class="socials-id dr"><a href="https://www.instagram.com/chaeri.heav3n/" target="_blank">insta</a></div>
+						<div class="socials-id ln"><a href="https://github.com/Chaeri-Heav3n" target="_blank">ghub</a></div>
+						<div class="socials-id ig"><a href="https://www.linkedin.com/in/zay-ford-97949b247/" target="_blank">lnkd-in.</a></div>
+						<div class="socials-id tw"><a href="https://www.youtube.com/playlist?list=PLOGuxFMUsIM8O11z3X5QWgZnyqUljTPb8" target="_blank">✰♫✰</a></div>
 					</div>
 				</section>
 
@@ -203,7 +201,7 @@
 				<div class="footer">
 					<div class="navbar">
 						<div class="navbar-container">
-							<div class="site-title">chaeri.heav3n@htmldreams.com</div>
+							<div class="site-title">zaikamgmt@gmail.com</div>
 							<div class="site-year">55.386656, 11.764279</div>
 						</div>
 					</div>
