--- a/e-commerce.html
+++ b/e-commerce.html
@@ -109,10 +109,10 @@
 
 </head>
 
-<body style="Margin:0;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0;min-width:100%;background-color:#DDE0E1;">
+<body style="Margin:0;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0;min-width:100%;background-color:#DDE0E1;" bgcolor="#DDE0E1">
     <!--[if (gte mso 9)|(IE)]>
       <style type="text/css">
-         body {background-color: #F6F9FC!important;}
+         body {background-color: #DDE0E1!important;}
          body, table, td, p, a {font-family: sans-serif, Arial, Helvetica!important;}
       </style>
    <![endif]-->
@@ -198,7 +198,7 @@
                 
                 <!-- COVER PHOTO START -->
                 <tr>
-                    <td class="banner" background="https://i.ibb.co/pvV7p9y/pexels-santiago-boada-7647913.jpg" width="600" height="700" style="background-position: center center!important;background-size: cover!important;">
+                    <td class="banner" background="https://i.ibb.co/pvV7p9y/pexels-santiago-boada-7647913.jpg" width="600" height="710" style="background-position: center center!important;background-size: cover!important;">
                         <!--[if (gte mso 9)|(IE)]>
 						<v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="border:0;display:inline-block;position:absolute;width:450pt;height:525pt;">
 							<v:fill type="tile" src="https://i.ibb.co/pvV7p9y/pexels-santiago-boada-7647913.jpg" />
@@ -635,21 +635,21 @@
                                 <h3 style="font-size: 19px;">DOWNLOAD OUR APP:</h3>
                             </td>
                         </tr>
-                      <tr>
-                        <td style="text-align: center;padding-top: 20px; padding-right: 0;padding-bottom: 10px; padding-left: 0;">
-                            <a href="https://example.com" target="_blank"><img src="https://i.ibb.co/s6N2j1g/5a902dbf7f96951c82922875.png"  alt="Google Play App" width="200" border="0"></a>
-                        </td>
-                      </tr>
+                        <tr>
+                            <td style="text-align: center;padding-top: 20px; padding-right: 0;padding-bottom: 10px; padding-left: 0;">
+                                <a href="https://example.com" target="_blank"><img src="https://i.ibb.co/s6N2j1g/5a902dbf7f96951c82922875.png"  alt="Google Play App" width="200" border="0"></a>
+                            </td>
+                        </tr>
 
-                      <tr>
-                        <td style="text-align: center;padding-top: 0; padding-right: 0;padding-bottom: 20px; padding-left: 0;">
-                            <a href="https://example.com" target="_blank"><img src="https://i.ibb.co/Npz5XHt/5a902db97f96951c82922874.png"  alt="Apple Store App" width="180" border="0"></a>
-                        </td>
-                      </tr>
+                        <tr>
+                            <td style="text-align: center;padding-top: 0; padding-right: 0;padding-bottom: 20px; padding-left: 0;">
+                                <a href="https://example.com" target="_blank"><img src="https://i.ibb.co/Npz5XHt/5a902db97f96951c82922874.png"  alt="Apple Store App" width="180" border="0"></a>
+                            </td>
+                        </tr>
 
-                      <tr>
-                        <td height="5px" style="background-color: black;"></td>
-                    </tr>
+                        <tr>
+                            <td height="5px" style="background-color: black;"></td>
+                        </tr>
 
                    </table>
                 </td>
@@ -750,7 +750,7 @@
 						<table width="100%" cellspacing="0" cellpadding="0" border="0" role="presentation">
 							<tr>
 								<td class="padding content" style="padding-top: 20px;padding-right: 0;padding-bottom: 23px;padding-left: 0;width: 100%;text-align: center;border-top: 5px solid black;">
-									<p style="font-size: 16px;line-height: 22px;padding-top: 2px;padding-bottom: 2px;"><a href="https://example.com" target="_blank" style="color: #0f0f0f;">&copy; chaeri.heav3n.com</a></p>
+									<p style="font-size: 16px;line-height: 22px;padding-top: 2px;padding-bottom: 2px;"><a href="https://example.com" target="_blank" style="color: #0f0f0f;">&copy; chaeri-heav3n.github.io</a></p>
 								</td>
 							</tr>
 						</table>
