--- a/newsletter.html
+++ b/newsletter.html
@@ -154,11 +154,11 @@
 
             <!-- BANNER START -->
             <tr>
-                <td style="padding-top: 0;padding-right: 0;padding-bottom: 0;padding-left: 0;">
+                <td style="padding-top: 0;padding-right: 20px;padding-bottom: 0;padding-left: 20px;">
                     <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #f1641e;color: #fff;" role="presentation">
                         <tr>
                             <td align="center" style="padding-top: 60px;padding-right: 0;padding-bottom: 60px;padding-left: 0;">
-                                <h1>Create a pricing strategy for your<br> listings</h1>
+                                <h1>Create a pricing strategy for your listings</h1>
                             </td>
                         </tr>
                     </table>
@@ -186,8 +186,8 @@
                 <td style="padding-top: 0;padding-right: 0;padding-bottom: 0;padding-left: 0;">
                     <table width="100%" cellspacing="0" cellpadding="0" border="0" style="background-color: #f1641e;color: #fff;" role="presentation">
                         <tr>
-                            <td align="center" style="padding-top: 60px;padding-right: 0;padding-bottom: 35px;padding-left: 0;">
-                                <p style="font-size: 18px;">Kick off the new year with a review of whether your item prices are<br> covering the cost of your materials, time, labor, and overhead.</p>
+                            <td align="center" style="padding-top: 60px;padding-right: 20px;padding-bottom: 35px;padding-left: 20px;">
+                                <p style="font-size: 18px;">Kick off the new year with a review of whether your item prices are covering the cost of your materials, time, labor, and overhead.</p>
                             </td>
                         </tr>
 
