--- a/newsletter.html
+++ b/newsletter.html
@@ -157,7 +157,7 @@
                 <td style="padding-top: 0;padding-right: 20px;padding-bottom: 0;padding-left: 20px;">
                     <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #f1641e;color: #fff;" role="presentation">
                         <tr>
-                            <td align="center" style="padding-top: 60px;padding-right: 0;padding-bottom: 60px;padding-left: 0;">
+                            <td align="center" style="padding-top: 60px;padding-right: 20px;padding-bottom: 60px;padding-left: 20px;">
                                 <h1>Create a pricing strategy for your listings</h1>
                             </td>
                         </tr>
