--- a/newsletter.html
+++ b/newsletter.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<!DOCTYPE html>
+<html lang="en" dir="ltr" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="color-scheme" content="light dark">
-   <meta name="supported-color-schemes" content="light dark">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+<meta name="format-detection" content="telephone=no, date=no, address=no, email=no, url=no">
+<meta name="x-apple-disable-message-reformatting">
+<meta name="color-scheme" content="light dark">
+<meta name="supported-color-schemes" content="light dark">
 	<title>Fashion Email</title>
 
 	<style type="text/css">
@@ -109,7 +111,7 @@
 
 </head>
 
-<body style="Margin:0;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0;min-width:100%;background-color:#DDE0E1;"" bgcolor="#DDDE0E1">
+<body style="Margin: 0;padding-top: 0;padding-right: 0;padding-bottom: 0;padding-left: 0;min-width: 100%;background-color:#DDE0E1;" bgcolor="#DDDE0E1">
 <!--[if (gte mso 9)|(IE)]>
     <style type="text/css">
         body {background-color: #DDE0E1!important;}
@@ -154,10 +156,10 @@
 
             <!-- BANNER START -->
             <tr>
-                <td style="padding-top: 0;padding-right: 20px;padding-bottom: 0;padding-left: 20px;">
+                <td style="padding-top: 0;padding-right: 0;padding-bottom: 0;padding-left: 0;">
                     <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #f1641e;color: #fff;" role="presentation">
                         <tr>
-                            <td align="center" style="padding-top: 60px;padding-right: 0;padding-bottom: 60px;padding-left: 0;">
+                            <td align="center" style="padding-top: 60px;padding-right: 20px;padding-bottom: 60px;padding-left: 20px;">
                                 <h1>Create a pricing strategy for your listings</h1>
                             </td>
                         </tr>
@@ -262,7 +264,7 @@
                                                     <td>
                                                         <p style="font-size: 20px;font-weight: bold;padding-top: 2px;">Refresh your listings for 2023</p>
                                                         <p style="font-size: 17px;line-height: 27px;padding-top: 15px;padding-right: 0;padding-bottom: 15px;padding-left: 0;">Now that the holidays are over, it’s a good time to optimize your listings for the current season. Check out our “EtSEO” recap for inspo!</p>
-                                                        <a href="https://example.com" target="_blank" style="font-weight: bold;"><p>Learn More →</p></a>
+                                                        <a href="https://example.com" target="_blank" style="font-weight: bold;text-decoration: none;color: #0f0f0f;"><p>Learn More →</p></a>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -308,7 +310,7 @@
                                                     <td>
                                                         <p style="font-size: 20px;font-weight: bold;padding-top: 2px;">Make it ✨marble ✨</p>
                                                         <p style="font-size: 17px;line-height: 30px;padding: 15px 0 15px 0;">Trending now with buyers? All things marble! Our trend expert, Darya Ilya Johnson, is sharing everything you need to know.</p>
-                                                        <a href="https://example.com" target="_blank" style="font-weight: bold;"><p>Watch the video →</p></a>
+                                                        <a href="https://example.com" target="_blank" style="font-weight: bold;text-decoration: none;color: #0f0f0f;"><p>Watch the video →</p></a>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -398,7 +400,7 @@
                                                     <td>
                                                         <p style="font-size: 20px;font-weight: bold;padding-top: 2px;">5 common photography mistakes</p>
                                                         <p style="font-size: 17px;line-height: 30px;padding: 15px 0 15px 0;">From a blurry close-up to an overexposed image, discover the most common photo mistakes new sellers make, and how you can avoid them.</p>
-                                                        <a href="https://example.com" target="_blank" style="font-weight: bold;"><p>Read Now →</p></a>
+                                                        <a href="https://example.com" target="_blank" style="font-weight: bold;text-decoration: none;color: #0f0f0f;"><p>Read Now →</p></a>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -492,7 +494,7 @@
                             </tr
 							<tr>
 								<td class="padded content" style="padding-top: 15px;padding-right: 0;padding-bottom: 15px;padding-left: 0;text-align: center;">
-									<p style="font-size: 16px;line-height: 22px;padding-top: 3px;padding-bottom: 3px;"><a href="https://example.com" target="_blank" style="text-decoration: none;">&copy; chaeri-heav3n.github.io</a></p>
+									<p style="font-size: 16px;line-height: 22px;padding-top: 3px;padding-bottom: 3px;"><a href="https://example.com" target="_blank" style="text-decoration: none;color: #0f0f0f;">&copy; chaeri-heav3n.github.io</a></p>
 								</td>
 							</tr>
 						</table>
