--- a/transactional.html
+++ b/transactional.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-  
+<!DOCTYPE html>
+<html lang="en" dir="ltr" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="color-scheme" content="light dark">
-  <meta name="supported-color-schemes" content="light dark">
-  
-  <title></title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+<meta name="format-detection" content="telephone=no, date=no, address=no, email=no, url=no">
+<meta name="x-apple-disable-message-reformatting">
+<meta name="color-scheme" content="light dark">
+<meta name="supported-color-schemes" content="light dark">
+<title>Transactional Email</title>
   
   <style type="text/css">
     /* FONT */
@@ -43,7 +43,7 @@
 </head>
 
   
-<body style="background-color: #DDE0E1;" bgcolor="#DDE0E1">
+<body style="margin: 0;padding: 0;padding-right: 0;padding-bottom: 0;padding-left: 0;min-width: 100%;background-color: #DDE0E1;" bgcolor="#DDE0E1">
 <!--[if (gte mso 9)|(IE)]>
     <style type="text/css">
         body {background-color: #DDE0E1 !important;}
@@ -74,7 +74,7 @@
                         <table width="100%" cellspacing="0" cellpadding="0" border="0" style="max-width: 6oopx;">
                             <tr>
                                 <td align="center" valign="top" style="padding-top: 20px;padding-right: 0;padding-left: 0;padding-bottom: 18px;">
-                                    <a href="https://example.com" target="_blank" style="text-decoration: none;">
+                                    <a href="https://example.com" target="_blank" style="text-decoration: none;color: #fff;">
                                         <span style="font-size: 35px;color: #fff;">YOUR LOGO</span>
                                     </a>
                                 </td>
@@ -87,10 +87,10 @@
 
                 <!-- WELCOME START -->
                 <tr>
-                    <td bgcolor="teal" align="center" style="padding-top: 0;padding-right: 10px;padding-bottom: 0px;padding-left: 10px;">
+                    <td bgcolor="#fff" align="center" style="padding-top: 0;padding-right: 10px;padding-bottom: 0px;padding-left: 10px;">
                         <table width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width: 600px;">
                             <tr>
-                                <td bgcolor="#fff" align="center" valign="top" style="padding-top: 40px;padding-right: 20px;padding-bottom: 20px;padding-left: 20px;border-radius: 4px 4px 0px 0px;color: #0f0f0f;font-size: 48px;font-weight: bold;letter-spacing: 2px;line-height: 48px;">
+                                <td bgcolor="#fff" align="center" valign="top" style="background-color: #fff;padding-top: 40px;padding-right: 20px;padding-bottom: 20px;padding-left: 20px;border-radius: 4px 4px 0px 0px;color: #0f0f0f;font-size: 48px;font-weight: bold;letter-spacing: 2px;line-height: 48px;">
                                     <h1 style="font-size: 48px;font-weight: bold;">Welcome!</h1>
                                 </td>
                             </tr>
@@ -112,14 +112,14 @@
 
                             <!-- Button Start -->
                             <tr>
-                                <td bgcolor="#fff" align="left">
+                                <td bgcolor="#0f0f0f" align="left">
                                     <table width="100%" cellpadding="0" cellspacing="0" border="0">
                                         <tr>
                                             <td bgcolor="#fff" align="center" style="padding-top: 20px;padding-right: 30px;padding-bottom: 40px;padding-left: 30px;">
                                                 <table cellpadding="0" cellspacing="0" border="0">
                                                     <tr>
                                                         <td align="center" bgcolor="#0f0f0f" style="border-radius: 3px;">
-                                                            <a href="https://example.com" target="_blank" style="padding: 15px 25px;border-radius: 2px;border: 1px solid #0f0f0f;display: inline-block;">
+                                                            <a href="https://example.com" target="_blank" style="padding: 15px 25px;border-radius: 3px;border: 1px solid #0f0f0f;display: inline-block;">
                                                                 <p style="color: #fff;font-size: 20px;">Confirm Account</p>
                                                             </a>
                                                         </td>
