--- a/promotional.html
+++ b/promotional.html
@@ -107,7 +107,7 @@
 <![endif]-->
 </head>
 
-<body style="margin: 0;padding: 0;padding-right: 0;padding-bottom: 0;padding-left: 0;min-width :100%;background-color: #E8E8E8;">
+<body style="margin: 0;padding: 0;padding-right: 0;padding-bottom: 0;padding-left: 0;min-width: 100%;background-color: #E8E8E8;">
 <!--[if (gte mso 9)|(IE)]>
     <style type="text/css">
         body {background-color: #E8E8E8!important;}
@@ -119,7 +119,7 @@
         <div style="max-width: 600px;background-color: #ffffff;box-shadow: 0 0 10px rgba(0, 0, 0, .2);">
 
             <!-- HIDDEN PREHEADER TEXT (remove comment before deployment)-->
-            <div style="display: none;max-width: 0px;max-height: 0px;opacity: 0;overflow: hidden;mso-hide: all;mso-line-height-rule: exactly;color: #FAFDFE;font-size: 1px;line-height: 1px;font-family: sans-serif, Arial, Helvetica;">
+            <div style="display: none;max-width: 0px;max-height: 0px;opacity: 0;overflow: hidden;mso-hide: all;mso-line-height-rule: exactly;color: #FAFDFE;font-size: 1px;line-height: 1px;font-family: 'Neuton', sans-serif, Arial, Helvetica;">
                 <!-- ADD PREHEADER TEXT HERE (85-100 CHARACTERS IN LENGTH) -->
             </div>
             <!-- END PREHEADER TEXT -->
@@ -140,7 +140,7 @@
                         <tr>
                             <td class="padded content" style="border-top: 5px solid #0f0f0f;padding-top: 10px;padding-right: 20px;padding-bottom: 8px;padding-left: 20px;text-align: center;width: 600px;background-color: #EDEDED;">
 
-                                <a href="https://example.com" target="_blank"><h2 style="font-size: 40px;">YOUR LOGO</h2></a>
+                                <a href="https://example.com" target="_blank" style="text-decoration: none;color:#0f0f0f;"><h2 style="font-size: 40px;">YOUR LOGO</h2></a>
 
                             </td>
                         </tr>
@@ -155,7 +155,7 @@
                 <td class="banner" background="https://i.ibb.co/tCcFnfD/pexels-wilson-ren-4981623.jpg" align="center" valign="top" style="width: 100%;height: 400px;background-position: center center!important;background-size: cover!important;">
 
                     <!--[if (gte mso 9)|(IE)]>
-						<v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:600px;height:400px;background-position: center center!important;background-size: cover!important;">
+						<v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="border:0;display:inline-block;position:absolute;width:450pt;height:300pt;">
 						<v:fill type="tile" src="https://i.ibb.co/tCcFnfD/pexels-wilson-ren-4981623.jpg" />
 						<v:textbox inset="0,0,0,0">
 					<![endif]-->
@@ -190,7 +190,7 @@
                                                 <table class="darkmode-transparent" align="center" cellpadding="0" cellspacing="0" border="0" role="presentation">
                                                     <tr>
 
-                                                        <td align="center" style="border-radius:3px;" bgcolor="#464646">
+                                                        <td align="center" style="border-radius:3px;" bgcolor="#0f0f0f">
 															<a href="https://example.com" target="_blank" style="font-size: 20px;text-decoration: none;color: #ffffff;background-color: #0f0f0f;border:1px solid #0f0f0f;border-radius:3px;padding:12px 20px;display: inline-block;">SHOP NOW
 															</a>
 														</td>
@@ -408,8 +408,8 @@
                                               <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation">
                                                  <tr>
  
-                                                    <td align="center" style="border-radius:3px;" bgcolor="#464646">
-                                                       <a href="https://example.com" target="_blank" style="font-size: 20px;text-decoration: none;color: #ffffff;background-color: black;border:1px solid #464646;border-radius:3px;padding:12px 20px;display: inline-block;">SHOP NOW
+                                                    <td align="center" style="border-radius:3px;" bgcolor="#0f0f0f">
+                                                       <a href="https://example.com" target="_blank" style="font-size: 20px;text-decoration: none;color: #ffffff;background-color: black;border:1px solid #0f0f0f;border-radius:3px;padding:12px 20px;display: inline-block;">SHOP NOW
                                                        </a>
                                                     </td>
  
