--- a/main.html
+++ b/main.html
@@ -145,7 +145,7 @@
 
 				<div class="whitespace"></div>
 
-				<!-- clients -->
+				<!-- status -->
 				<div class="section-header">
 					<div class="section-header-container">
 						<div class="section-title">status</div>
@@ -155,8 +155,8 @@
 
 				<div class="divider"></div>
 
-				<section class="clients">
-					<div class="clients-container">
+				<section class="status">
+					<div class="status-container">
 						<p>
 							<br />
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;let's collab.
