--- a/email-web.html
+++ b/email-web.html
@@ -296,7 +296,7 @@
 
 				<div class="whitespace"></div>
 
-				<!-- clients -->
+				<!-- status -->
 				<div class="section-header">
 					<div class="section-header-container">
 						<div class="section-title">status</div>
@@ -306,8 +306,8 @@
 
 				<div class="divider"></div>
 
-				<section class="clients">
-					<div class="clients-container">
+				<section class="status">
+					<div class="status-container">
 						<p>
 							<br />
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;let's collab.
