--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div class="share-button" link="https://chaeri-heav3n.github.io/">
+        <div class="share-button" link="index.html">
             <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
         </div>
     </header>
@@ -35,25 +35,7 @@
                 <img class="svg" src="icons/watermelon-svgrepo-com.svg" />
             </div>
             <p class="website">*Website Officiel*</p>
-            <div class="tile-share-button" link="https://chaeri-heav3n.github.io/main.html">
-                <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
-            </div>
-        </a>
-        <a class="tile" href="https://youtu.be/OzrNjwAsh0w" target="_blank">
-            <div class="icon">
-                <img class="svg" src="icons/grapefruit-svgrepo-com.svg" />
-            </div>
-            <p>Latest Video</p>
-            <div class="tile-share-button" link="https://youtu.be/OzrNjwAsh0w">
-                <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
-            </div>
-        </a>
-        <a class="tile" href="https://www.youtube.com/playlist?list=PLOGuxFMUsIM8O11z3X5QWgZnyqUljTPb8" target="_blank">
-            <div class="icon">
-                <img class="svg" src="icons/kiwi-svgrepo-com.svg" />
-            </div>
-            <p>✰ multidimensional ✰</p>
-            <div class="tile-share-button" link="https://www.youtube.com/playlist?list=PLOGuxFMUsIM8O11z3X5QWgZnyqUljTPb8">
+            <div class="tile-share-button" link="main.html">
                 <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
             </div>
         </a>
@@ -66,12 +48,30 @@
                 <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
             </div>
         </a>
-        <a class="tile" href="https://www.linkedin.com/in/zay-ford-97949b247/" target="_blank">
+        <a class="tile" href="https://www.linkedin.com/in/zay-ford-97949b247/recent-activity/shares/" target="_blank">
             <div class="icon">
                 <img class="svg" src="icons/fig-svgrepo-com.svg" />
             </div>
-            <p>LinkedIn</p>
-            <div class="tile-share-button" link="https://www.linkedin.com/in/zay-ford-97949b247/">
+            <p>Email Code Etiquette</p>
+            <div class="tile-share-button" link="https://www.linkedin.com/in/zay-ford-97949b247/recent-activity/shares/">
+                <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
+            </div>
+        </a>
+        <a class="tile" href="https://www.youtube.com/playlist?list=PLOGuxFMUsIM8O11z3X5QWgZnyqUljTPb8" target="_blank">
+            <div class="icon">
+                <img class="svg" src="icons/kiwi-svgrepo-com.svg" />
+            </div>
+            <p>✰ multidimensional ✰</p>
+            <div class="tile-share-button" link="https://www.youtube.com/playlist?list=PLOGuxFMUsIM8O11z3X5QWgZnyqUljTPb8">
+                <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
+            </div>
+        </a>
+        <a class="tile" href="https://youtu.be/OzrNjwAsh0w" target="_blank">
+            <div class="icon">
+                <img class="svg" src="icons/grapefruit-svgrepo-com.svg" />
+            </div>
+            <p>Latest Video</p>
+            <div class="tile-share-button" link="https://youtu.be/OzrNjwAsh0w">
                 <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
             </div>
         </a>
