--- a/email-web.html
+++ b/email-web.html
@@ -169,15 +169,15 @@
 						<div class="skills-container">
 							<div class="projects">
 								<div class="projects-div">
-                                	<a href="e-commerce.html" target="_blank"><img class="project-img" src="images/e-commerce.png" alt="E-Commerce Email"></a>
+                                	<a href="noodles.html" target="_blank"><img class="project-img" src="images/noodles.png" alt="Promotional Email"></a>
                                 	<div class="text-container">
-                                    	<p class="text"><a class="link-none" href="e-commerce.html" target="_blank">E-Commerce Email</a></p>
+                                    	<p class="text"><a class="link-none" href="noodles.html" target="_blank">Call To Action Email</a></p>
                                 	</div>
                             	</div>
 								<div class="projects-div">
-                                	<a href="film site/index.html" target="_blank"><img class="project-img" src="images/film-website.png" alt="Film Website"></a>
+                                	<a href="e-commerce.html" target="_blank"><img class="project-img" src="images/e-commerce.png" alt="E-Commerce Email"></a>
                                 	<div class="text-container">
-                                    	<p class="text"><a class="link-none" href="film site/index.html" target="_blank">Film Debut Website</a></p>
+                                    	<p class="text"><a class="link-none" href="e-commerce.html" target="_blank">E-Commerce Email</a></p>
                                 	</div>
                             	</div>
 								<div class="projects-div">
