--- a/3d.html
+++ b/3d.html
@@ -103,14 +103,14 @@
 						<div>
 							<nav class="menu">
 								<div class="menu__item">
-									<a class="menu__item-link" href="email-web.html">/ EMAIL & WEB DESIGN</a>
+									<a class="menu__item-link" href="email-web.html">/ EMAIL DEVELOPMENT</a>
 									<img class="menu__item-img" src="images/webpage.png" />
 									<div class="marquee">
 										<div class="marquee__inner">
-											<span>EMAIL & WEB DESIGN</span>
-											<span>EMAIL & WEB DESIGN</span>
-											<span>EMAIL & WEB DESIGN</span>
-											<span>EMAIL & WEB DESIGN</span>
+											<span>EMAIL DEVELOPMENT</span>
+											<span>EMAIL DEVELOPMENT</span>
+											<span>EMAIL DEVELOPMENT</span>
+											<span>EMAIL DEVELOPMENT</span>
 										</div>
 									</div>
 								</div>
