--- a/email-web.html
+++ b/email-web.html
@@ -38,7 +38,7 @@
 				<!-- header -->
 				<div class="header">
 					<div class="header-container">
-						<h2>Email & Web Design</h2>
+						<h2>Email Development</h2>
 					</div>
 				</div>
 				<!-- end header -->
@@ -245,14 +245,14 @@
 						<div>
 							<nav class="menu">
 								<div class="menu__item">
-									<a class="menu__item-link" href="email-web.html">/ EMAIL & WEB DESIGN</a>
+									<a class="menu__item-link" href="email-web.html">/ EMAIL DEVELOPMENT</a>
 									<img class="menu__item-img" src="images/webpage.png" />
 									<div class="marquee">
 										<div class="marquee__inner">
-											<span>EMAIL & WEB DESIGN</span>
-											<span>EMAIL & WEB DESIGN</span>
-											<span>EMAIL & WEB DESIGN</span>
-											<span>EMAIL & WEB DESIGN</span>
+											<span>EMAIL DEVELOPMENT</span>
+											<span>EMAIL DEVELOPMENT</span>
+											<span>EMAIL DEVELOPMENT</span>
+											<span>EMAIL DEVELOPMENT</span>
 										</div>
 									</div>
 								</div>
