--- a/email-web.html
+++ b/email-web.html
@@ -58,7 +58,6 @@
 
 					<!-- my process -->
 					<h2 class="title">My Process</h2>
-					<p class="click-github">As an email developer.</p>
 					<div class="skills-container">
 						<div class="skills-icons">
 							<div class="process-icon">
@@ -163,7 +162,7 @@
 
 					<!-- projects section stares -->
 					<h2 class="title">My Projects</h2>
-					<p class="click-github"><a class="link-none" href="https://github.com/Chaeri-Heav3n" target="_blank">Click here to view code on Github.</a></p>
+					<p class="click-github"><a class="link-none" href="https://github.com/Chaeri-Heav3n" target="_blank">*Click here to view code on Github.*</a></p>
 
 					<div class="projects-container">
 						<div class="skills-container">
