--- a/email-web.html
+++ b/email-web.html
@@ -219,6 +219,12 @@
                                 	</div>
                             	</div>
 								<div class="projects-div">
+                                	<img class="cert-img" src="https://i.ibb.co/Ln16jm4/Screen-Shot-2023-04-19-at-10-00-04-PM.png" alt="Web Design Certification">
+                                	<div class="text-container">
+                                    	<p class="text">Email Deliverability</p>
+                                	</div>
+                            	</div>
+								<div class="projects-div">
                                 	<img class="cert-img" src="images/web design.png" alt="Web Design Certification">
                                 	<div class="text-container">
                                     	<p class="text">Web Design</p>
@@ -244,8 +250,22 @@
 						<div>
 							<nav class="menu">
 								<div class="menu__item">
-									<a class="menu__item-link" href="email-web.html">/ EMAIL DEVELOPMENT</a>
+									<a class="menu__item-link" href="web-design.html">/ WEB DESIGN</a>
 									<img class="menu__item-img" src="images/webpage.png" />
+									<div class="marquee">
+										<div class="marquee__inner">
+											<span>WEB DESIGN</span>
+											<span>WEB DESIGN</span>
+											<span>WEB DESIGN</span>
+											<span>WEB DESIGN</span>
+										</div>
+									</div>
+								</div>
+
+                                <div class="divider"></div>
+								<div class="menu__item">
+									<a class="menu__item-link" href="email-web.html">/ EMAIL DEVELOPMENT</a>
+									<img class="menu__item-img" src="https://i.ibb.co/KKyZN9M/Screen-Shot-2023-03-23-at-8-48-06-PM.png" />
 									<div class="marquee">
 										<div class="marquee__inner">
 											<span>EMAIL DEVELOPMENT</span>
