--- a/main.html
+++ b/main.html
@@ -95,8 +95,22 @@
 						<div>
 							<nav class="menu">
 								<div class="menu__item">
-									<a class="menu__item-link" href="email-web.html">/ EMAIL DEVELOPMENT</a>
+									<a class="menu__item-link" href="web-design.html">/ WEB DESIGN</a>
 									<img class="menu__item-img" src="images/webpage.png" />
+									<div class="marquee">
+										<div class="marquee__inner">
+											<span>WEB DESIGN</span>
+											<span>WEB DESIGN</span>
+											<span>WEB DESIGN</span>
+											<span>WEB DESIGN</span>
+										</div>
+									</div>
+								</div>
+
+                                <div class="divider"></div>
+								<div class="menu__item">
+									<a class="menu__item-link" href="email-web.html">/ EMAIL DEVELOPMENT</a>
+									<img class="menu__item-img" src="https://i.ibb.co/KKyZN9M/Screen-Shot-2023-03-23-at-8-48-06-PM.png" />
 									<div class="marquee">
 										<div class="marquee__inner">
 											<span>EMAIL DEVELOPMENT</span>
