--- a/web-design.html
+++ b/web-design.html
@@ -38,7 +38,7 @@
 				<!-- header -->
 				<div class="header">
 					<div class="header-container">
-						<h3>3D ART &<br> AUGMENTED<br> REALITY</h3>
+						<h2>Web Design</h2>
 					</div>
 				</div>
 				<!-- end header -->
@@ -46,7 +46,7 @@
 				<!-- sections -->
 				<div class="section-header">
 					<div class="section-header-container">
-						<div class="section-title">skills</div>
+						<div class="section-title">gallery</div>
 						<div class="section-order">/001</div>
 					</div>
 				</div>
@@ -55,36 +55,33 @@
 
 				<!-- skills -->
 				<section class="email-section">
+				
 
-					<!-- my process -->
-					<h2 class="title">Coming Soon</h2>
-					<p class="click-github">Sneak Peak:</p>
-					<div class="skills-container">
-						<div class="skills-icons">
-							<div class="process-icon">
-                                <img class="img-3d-gif" src="images/chaeri.gif" alt="Chaeri Logo">
-                            </div>
-							<div class="process-icon">
-                                <img class="img-3d-gif" src="images/chaeri.gif" alt="Chaeri Logo">
-                            </div>
+				<section class="email-section">
+
+					<!-- projects section stares -->
+					<h2 class="title">Design Samples</h2>
+					<p class="click-github"><a class="link-none" href="https://github.com/Chaeri-Heav3n" target="_blank">*Click here to view code on Github.*</a></p>
+
+					<div class="projects-container">
+						<div class="skills-container">
+							<div class="projects">
+								<div class="projects-div">
+                                	<a href="website designs/travel.html" target="_blank"><img class="project-img" src="https://i.ibb.co/dfnD9t6/Screen-Shot-2023-04-17-at-11-46-53-PM.png" alt="Promotional Email"></a>
+                                	<div class="text-container">
+                                    	<p class="text"><a class="link-none" href="website designs/travel.html" target="_blank">Travel Site Concept</a></p>
+                                	</div>
+                            	</div>
+								<div class="projects-div">
+                                	<a href="film site/index.html" target="_blank"><img class="project-img" src="https://i.ibb.co/qYKVZPj/Screen-Shot-2023-02-23-at-10-22-35-PM.png" alt="Promotional Email"></a>
+                                	<div class="text-container">
+                                    	<p class="text"><a class="link-none" href="film site/index.html" target="_blank">Film Studio Concept</a></p>
+                                	</div>
+                            	</div>
+							</div>
 						</div>
 					</div>
-					<div class="skills-container">
-						<div class="skills-icons">
-						
-							<div class="process-icon">
-                                <img class="img-3d" src="images/mauv1.png" alt="Mauvaise Foi 1">
-                            </div>
-
-							<div class="process-icon">
-                                <img class="img-3d" src="images/mauv2.png" alt="Mauvaise Foi 2">
-                            </div>
-
-							<div class="process-icon">
-                                <img class="img-3d" src="images/mauv3.png" alt="Mauvaise Foi 3">
-                            </div>
-						</div>
-					</div>
+				</section>
 
 				<div class="whitespace"></div>
 
@@ -102,7 +99,7 @@
 					<div class="project-container">
 						<div>
 							<nav class="menu">
-								<div class="menu__item">
+                                <div class="menu__item">
 									<a class="menu__item-link" href="web-design.html">/ WEB DESIGN</a>
 									<img class="menu__item-img" src="images/webpage.png" />
 									<div class="marquee">
@@ -116,6 +113,7 @@
 								</div>
 
                                 <div class="divider"></div>
+
 								<div class="menu__item">
 									<a class="menu__item-link" href="email-web.html">/ EMAIL DEVELOPMENT</a>
 									<img class="menu__item-img" src="https://i.ibb.co/KKyZN9M/Screen-Shot-2023-03-23-at-8-48-06-PM.png" />
@@ -204,7 +202,7 @@
 					<div class="socials-container">
 						<div class="socials-id dr"><a href="https://www.instagram.com/chaeri.heav3n/" target="_blank">insta</a></div>
 						<div class="socials-id ln"><a href="https://github.com/Chaeri-Heav3n" target="_blank">ghub</a></div>
-						<div class="socials-id ig"><a href="https://www.linkedin.com/in/zay-ford-97949b247/recent-activity/shares/" target="_blank">lnkd-in.</a></div>
+						<div class="socials-id ig"><a href="https://www.linkedin.com/in/zay-ford-97949b247/recent-activity/shares/" target="_blank">lnkd-in</a></div>
 						<div class="socials-id tw"><a href="https://www.youtube.com/playlist?list=PLOGuxFMUsIM8O11z3X5QWgZnyqUljTPb8" target="_blank">✰♫✰</a></div>
 					</div>
 				</section>
