--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="container">
         <div class="image-container">
-            <img src="images/IMG_7099.jpg" />
+            <img src="images/chaeri.gif" />
     </div>
         <h1>@chaeri.heav3n</h1>
 
@@ -34,7 +34,7 @@
             <div class="icon">
                 <img class="svg" src="icons/watermelon-svgrepo-com.svg" />
             </div>
-            <p class="website">*Website Officiel*</p>
+            <p class="website">*Official Website*</p>
             <div class="tile-share-button" link="main.html">
                 <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
             </div>
@@ -52,7 +52,7 @@
             <div class="icon">
                 <img class="svg" src="icons/kiwi-svgrepo-com.svg" />
             </div>
-            <p>Email Code Etiquette</p>
+            <p>LinkedIn</p>
             <div class="tile-share-button" link="https://www.linkedin.com/in/zay-ford-97949b247/recent-activity/shares/">
                 <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
             </div>
@@ -75,7 +75,7 @@
                 <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
             </div>
         </a>
-       <!-- <a class="tile" href="https://www.instagram.com/chaeri.heav3n/" target="_blank">
+        <!--<a class="tile" href="https://www.instagram.com/chaeri.heav3n/" target="_blank">
             <div class="icon">
                 <img class="svg" src="icons/pear-svgrepo-com.svg" />
             </div>
@@ -83,7 +83,7 @@
             <div class="tile-share-button" link="https://www.instagram.com/chaeri.heav3n/">
                 <svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z" fill="currentColor"></path></svg>
             </div>
-        </a> -->
+        </a>-->
     </div>
 
 <script src="app.js"></script>
