--- a/web-design.html
+++ b/web-design.html
@@ -69,13 +69,13 @@
 								<div class="projects-div">
                                 	<a href="website designs/travel.html" target="_blank"><img class="project-img" src="https://i.ibb.co/dfnD9t6/Screen-Shot-2023-04-17-at-11-46-53-PM.png" alt="Promotional Email"></a>
                                 	<div class="text-container">
-                                    	<p class="text"><a class="link-none" href="website designs/travel.html" target="_blank">Travel Site Concept</a></p>
+                                    	<p class="text"><a class="link-none" href="website designs/travel.html" target="_blank">Travel Site Concept // *Desktop Only*</a></p>
                                 	</div>
                             	</div>
 								<div class="projects-div">
                                 	<a href="film site/index.html" target="_blank"><img class="project-img" src="https://i.ibb.co/qYKVZPj/Screen-Shot-2023-02-23-at-10-22-35-PM.png" alt="Promotional Email"></a>
                                 	<div class="text-container">
-                                    	<p class="text"><a class="link-none" href="film site/index.html" target="_blank">Film Studio Concept</a></p>
+                                    	<p class="text"><a class="link-none" href="film site/index.html" target="_blank">Film Studio Concept // *Mobile-Friendly*</a></p>
                                 	</div>
                             	</div>
 							</div>
