--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <div class="image-container">
             <img src="images/chaeri.gif" />
     </div>
-        <h1>@chaeri.heav3n</h1>
+        <a href="pitch-black.htm" target="_blank">
+            <h1>@chaeri.heav3n</h1>
+        </a>
 
         <a class="tile" href="main.html" target="_blank">
             <div class="icon">
