--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
 							Greetings! I'm chaeri.heav3n, formally known as Zay. Professionally, I am an HTML
 							email developer. Creatively, most of my energy is being channeled into
 							<a href="https://www.youtube.com/channel/UCB2vyk19067nWCTAVhuNkPA" target="_blank">here.ynow</a>. 
-							<br><br>here.ynow (born in March 1996) is my declared lifelong project to channel lessons in self-awareness & higher consciousness into works of art
+							<br><br>here.ynow (born on March 1996) is my declared lifelong project to channel lessons about self-awareness & higher consciousness into works of art
 							— for the world to consume and feel inspired by. Stay tuned for more.
 						</p>
 					</div>
